--- a/aTemplate1Elzerowebschool/css/page1.css
+++ b/aTemplate1Elzerowebschool/css/page1.css
@@ -172,7 +172,7 @@ body {
 /* end header */
 /* start landing section  */
 .landing {
-    background-image: url(images/elzero.jpg);
+    background-image: url(../images/elzero.jpg);
     background-size: cover;
     height: calc(100vh - 64px);
     position: relative;
